style.css
body {
    background: linear-gradient(rgb(35, 35, 35), rgb(10, 10, 10));
    background-repeat: no-repeat;
    background-attachment: fixed;
    margin: 0px;
}

h1 {
    text-align: center;
    color: white;
    font-family: "Lora", serif;
    font-weight: bold;
}

h2 {
    color: white;
    font-family: "Lora", serif;
    font-size: 18px;
    font-weight: 600;
}

p {
    color: rgb(210, 210, 210);
    font-family: "Inter", sans-serif;
  
}

.movie-card{
    display: grid;
    grid-template-columns: 10% 1fr;
    column-gap: 30px;
    border-top-style: solid;
    border-width: 0.5px;
    border-color: white;
    padding: 5px;
    width: 100vw;
    box-sizing: border-box;
    height: 260px;
    margin-bottom: 5px;
}

.movie-card img {
    width: 100%;
    height: auto;
    border-radius: 4px;
}

.title-row {
    display:flex;
    align-items: baseline;
    gap: 15px;
}

